# yew-egui-bug

./: Cargo.toml  README.md  index.html
src/: main.rs
