[package]
name = "yew-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
egui_extras = "0.27.2"
log = "0.4.21"
wasm-bindgen-futures = "0.4.42"
yew = {version = "0.21.0", features = ["csr"]}

